--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,19 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Y.a.F.e.Y Blog
 subtitle:
 description:
-author: John Doe
+author: YaFey
 language:
-timezone:
+    - zh-Hans  # 中文
+    - defaults
+timezone: Asia/Chongqing
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
 url: http://yoursite.com
-root: /blog
+root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 
