--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Chongqing
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://hyf.js.org/blog
+url: https://hyf.js.org
 root: /blog/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
